# Xu-Lab-UUV-Software

./: .gitignore  .mxproject  CMakeLists.txt  MCU-A.ioc  README.md
.github/: pull_request_template.md
Core/Inc/: main.h  stm32f4xx_it.h
Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Source/Host/: CMakeLists.txt  FrameBuffer.cpp  FrameBuffer.hpp  Host.cpp  README.md  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  VideoReceiver.cpp  VideoReceiver.hpp
Source/Host/Shaders/: YUVToRGB.frag  YUVToRGB.vert
Source/Microcontroller/: .gitignore  .mxproject  CMakeLists.txt  MCU-A.ioc  STM32F446RCTX_FLASH.ld  STM32F446XX_FLASH.ld
Source/Microcontroller/Core/Inc/: main.h
Source/Microcontroller/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Source/Microcontroller/Core/Startup/: startup_stm32f446rctx.s
Source/Microcontroller/cmake/stm32cubemx/: CMakeLists.txt
cmake/stm32cubemx/: CMakeLists.txt
